add IVD software

--- a/testing_settings.ini
+++ b/testing_settings.ini
@@ -12,10 +12,7 @@ DID5_content = "abc"
 
 
 [software]
-num_states = 12
-num_actions = 4
+name_software = "Google"
+version_number = 3.1
 
-[dir]
-models_path_name = new_model
-sumocfg_file_name = sumo_config.sumocfg
-model_to_test = 164
+
